# pytodcor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci_workflows.yml
analysis/: model_todcor_testing.ipynb  unit_test_todcor_case01.ipynb  unit_test_todcor_case02.ipynb  unit_test_xcor1d.ipynb
design/: components.pptx  notes.txt
docs/: index.rst
pytodcor/: __init__.py  load_model.py  load_spectrum.py  match_model.py  read_model_bosz.py  read_model_kurucz.py  read_spec_apogee.py  read_spec_arc35.py  spectrum.py
pytodcor/lib/: spectrum.py
pytodcor/model/: load_model.py  match_model.py  read_model_bosz.py  read_model_kurucz.py
pytodcor/obs/: load_spectrum.py  read_spec_apogee.py  read_spec_arc35.py
pytodcor/xcor/: find_n_pix_shift.py  todcor.py  xcor1d.py
tests/basic/: README.md  test_todcor_case01.py  test_xcor1d.py
