[metadata]
name = pytodcor
author = Scott Fleming, Nicholas Cabrera
license = BSD 3-Clause
license_file = LICENSE
url = https://github.com/scfleming/pytodcor
description = Python-based two-dimensional cross-correlation of astronomical spectra.
version = attr: pytodcor.__version__
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = False
github_project = scfleming/pytodcor

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires =
  astropy
  numpy
  pandas
  specutils
  scipy
  notebook

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[tool:pytest]
testpaths = "pytodcor" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
